# ndvi-viewer

./: .gitignore  LICENSE  README.md  app.py  mise.toml  pyproject.toml
