[project]
name = "ndvi-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki-nishikawa",email = "52784638+yuki-nishikawa@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rasterio (>=1.5.0,<2.0.0)",
    "pystac-client (>=0.9.0,<0.10.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.26.2,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false